--- a/app/src/main/res/layout/cardview_cart.xml
+++ b/app/src/main/res/layout/cardview_cart.xml
@@ -6,6 +6,25 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"></RelativeLayout>
+        android:layout_height="150dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Food Item"
+            android:id="@+id/cart_item"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rate"
+            android:id="@+id/cart_rate"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
