--- a/app/src/main/res/layout/cardview_foodcourt.xml
+++ b/app/src/main/res/layout/cardview_foodcourt.xml
@@ -6,6 +6,34 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"></RelativeLayout>
+        android:layout_height="150dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Restaurant Name"
+            android:id="@+id/restaurant_name"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cost for two"
+            android:id="@+id/restaurant_cost"
+            android:layout_below="@+id/restaurant_name"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Min. Service Time"
+            android:id="@+id/restaurant_time"
+            android:layout_below="@+id/restaurant_cost"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
