--- a/app/src/main/res/layout/cardview_result.xml
+++ b/app/src/main/res/layout/cardview_result.xml
@@ -6,6 +6,34 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"></RelativeLayout>
+        android:layout_height="150dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Restaurant Name"
+            android:id="@+id/result_name"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Amount"
+            android:id="@+id/result_amount"
+            android:layout_below="@+id/result_name"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Service Time"
+            android:id="@+id/result_time"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
