--- a/app/src/main/res/layout/cardview_foodcourt.xml
+++ b/app/src/main/res/layout/cardview_foodcourt.xml
@@ -4,36 +4,50 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="150dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Restaurant Name"
-            android:id="@+id/restaurant_name"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+        <LinearLayout
+            android:padding="20dp"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <ImageView
+                android:scaleType="centerInside"
+                android:id="@+id/restaurant_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cost for two"
-            android:id="@+id/restaurant_cost"
-            android:layout_below="@+id/restaurant_name"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+        <LinearLayout
+            android:padding="20dp"
+            android:orientation="vertical"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Restaurant Name"
+                android:id="@+id/restaurant_name" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Min. Service Time"
-            android:id="@+id/restaurant_time"
-            android:layout_below="@+id/restaurant_cost"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cost for two"
+                android:id="@+id/restaurant_cost" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Min. Service Time"
+                android:id="@+id/restaurant_time" />
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
