--- a/app/src/main/res/layout/cardview_menu.xml
+++ b/app/src/main/res/layout/cardview_menu.xml
@@ -9,14 +9,17 @@
     android:layout_margin="5dp">
 
     <RelativeLayout
+        android:padding="20dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Food Item"
             android:id="@+id/menu_item"
+            android:fontFamily="sans-serif-thin"
+            android:textSize="30dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
@@ -26,18 +29,20 @@
             android:layout_height="wrap_content"
             android:text="Price"
             android:id="@+id/menu_price"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="18dp"
             android:layout_below="@+id/menu_item"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:id="@+id/menu_add"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/menu_add_button" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
