--- a/app/src/main/res/layout/cardview_cart.xml
+++ b/app/src/main/res/layout/cardview_cart.xml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="2dp"
+    app:cardBackgroundColor="@color/cart_light"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
     <RelativeLayout
+        android:padding="20dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Food Item"
             android:id="@+id/cart_item"
-            android:layout_alignParentTop="true"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:textSize="26dp"
+            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
         <TextView
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rate"
             android:id="@+id/cart_rate"
-            android:layout_alignParentTop="true"
+            android:fontFamily="sans-serif-light"
+            android:textSize="22dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
