--- a/app/src/main/res/layout/cardview_menu.xml
+++ b/app/src/main/res/layout/cardview_menu.xml
@@ -43,6 +43,17 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:src="@drawable/menu_add_button" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/menu_quantity"
+            android:fontFamily="sans-serif-condensed"
+            android:layout_toEndOf="@+id/menu_add"
+            android:layout_centerInParent="true"
+            android:layout_below="@+id/menu_price"
+            android:layout_alignLeft="@+id/menu_add"
+            android:layout_alignStart="@+id/menu_add"/>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
