--- a/app/src/main/res/layout/cardview_result.xml
+++ b/app/src/main/res/layout/cardview_result.xml
@@ -1,39 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/result_light"
     android:layout_margin="5dp">
 
     <RelativeLayout
+        android:padding="20dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="wrap_content">
 
         <TextView
+            android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Restaurant Name"
             android:id="@+id/result_name"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:fontFamily="sans-serif-light"
+            android:textSize="32dp"
+            android:layout_centerHorizontal="true"/>
 
         <TextView
+            android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Amount"
             android:id="@+id/result_amount"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:textColor="@android:color/holo_green_dark"
             android:layout_below="@+id/result_name"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_centerHorizontal="true"/>
 
         <TextView
+            android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Service Time"
             android:id="@+id/result_time"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:textColor="@android:color/holo_red_light"
+            android:layout_below="@+id/result_amount"
+            android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
