--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="cart_primary">#2B8FCC</color>
     <color name="cart_dark">#1B597F</color>
     <color name="cart_light">#B9E4FF</color>
+
+    <color name="result_primary">#199981</color>
+    <color name="result_dark">#0E5447</color>
+    <color name="result_light">#ADFFF0</color>
 </resources>
